syntax = "proto3";

package user;

option go_package = "github.com/mfyai/mfydemo/proto;userpb";

import "google/protobuf/empty.proto";

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 status = 4;
  int64 version = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message AddUserReq {
  string name = 1;
  string email = 2;
  int32 status = 3;
}

message AddUserResp {
  int64 id = 1;
}

message UpdateUserReq {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 status = 4;
  int64 version = 5;
}

message RemoveUserReq {
  int64 id = 1;
}

message GetUserReq {
  int64 id = 1;
}

message GetUserResp {
  User user = 1;
}

service UserService {
  rpc AddUser(AddUserReq) returns (AddUserResp);
  rpc UpdateUser(UpdateUserReq) returns (google.protobuf.Empty);
  rpc RemoveUser(RemoveUserReq) returns (google.protobuf.Empty);
  rpc GetUser(GetUserReq) returns (GetUserResp);
}
